--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ h1{
     letter-spacing: 2px;
     margin-top: 25px;
     margin-bottom: 15px;
-    font-size: 40px;
+    font-size: 2rem;
+    
 }
 
 /* loader */
@@ -28,7 +29,7 @@ h1{
     bottom: 0;
     left: 0;
     right: 0;
-    background: rgba(255, 255, 255, 0.8)
+
 }
 
 .loader img{
@@ -38,3 +39,19 @@ h1{
     transform: translate(-50%, -50%);
 }
 
+.image-container{
+    margin: 10px 5%;
+
+}
+
+.image-container img{
+    width: 100%;
+}
+
+/* media query */
+
+@media screen and (max-width: 600px) {
+    .image-container{
+        margin: 10px;
+    }
+}
