--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ h1{
 /* loader */
 
 .loader{
-    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
@@ -41,11 +40,22 @@ h1{
 
 .image-container{
     margin: 10px 5%;
-
+    display: flex;
+    flex-direction: column;
 }
 
 .image-container img{
     width: 100%;
+ 
+}
+
+.link{
+    height: 100vh;
+}
+
+a:-webkit-any-link{
+    height: 100%;
+    cursor: pointer;
 }
 
 /* media query */
